# hacknation-overdogs

./: .gitignore  Agent_1_prompt.md  Agent_2_prompt.md  Agent_3_prompt.md  CLAUDE.md  Hackathon_Brief.MD  README.md  SERVER_README.md  main.py  pagerpager.md  plan_v2.md  pyproject.toml  requirements.txt  run_server.py
.claude/: settings.local.json
meridian/: __init__.py  config.py  main.py
meridian-ui/: package-lock.json  package.json
meridian-ui/public/lottie/: chat-bubbles.json  checklist.json  checkmark.json  compass.json  connected-nodes.json  document-lightbulb.json  particles.json  radar.json
meridian-ui/src/app/: globals.css  layout.tsx  page.tsx
meridian-ui/src/components/: BentoGrid.tsx  ConfidenceBar.tsx  ConversationPanel.tsx  EmergingIssues.tsx  EvalResults.tsx  KBCard.tsx  KnowledgeHealth.tsx  LearningPipeline.tsx  LottieAnimation.tsx  QAScoreForm.tsx  (+12 more)
meridian/demo/: deck.html  script.md
meridian/engine/: __init__.py  data_loader.py  eval_harness.py  gap_detector.py  kb_generator.py  provenance.py  query_router.py  vector_store.py
meridian/server/: __init__.py  app.py  contracts.py  demo_pipeline.py  demo_state.py  qa_scorer.py  synthetic_tickets.py
scripts/: check_columns.py  find_gap_ticket.py  smoke_api.py  test_demo_pipeline.py  test_engine_prompts_1_2.py  test_engine_prompts_1_2_3.py  test_engine_prompts_1_2_3_4.py  test_engine_prompts_1_to_5.py  test_full_end_to_end.py  test_openai_connection.py  test_openai_kb_generation.py  test_qa_scorer.py  test_synthetic_tickets.py  verify_integration.py
tests/: test_contracts.py  test_smoke.py
(+30 files in other folders)
