[project]
name = "hacknation-overdogs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.79.0",
    "fastapi>=0.128.4",
    "numpy>=2.4.2",
    "openai>=2.17.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
]
